--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start" : "node file_ex.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
